--- a/package.json
+++ b/package.json
@@ -8,19 +8,24 @@
     "eject": "expo eject"
   },
   "dependencies": {
+    "axios": "^0.21.1",
     "expo": "~40.0.0",
     "expo-status-bar": "~1.0.3",
-    "react": "16.13.1",
-    "react-dom": "16.13.1",
+    "react": "17.0.1",
+    "react-dom": "17.0.1",
     "react-native": "https://github.com/expo/react-native/archive/sdk-40.0.1.tar.gz",
-    "react-native-web": "~0.13.12"
+    "react-native-loading-spinner-overlay": "^2.0.0",
+    "react-native-web": "~0.14.10",
+    "react-uid": "^2.3.1"
   },
   "devDependencies": {
-    "@babel/core": "~7.9.0",
-    "@types/react": "~16.9.35",
-    "@types/react-dom": "~16.9.8",
+    "@babel/core": "~7.12.10",
+    "@types/axios": "^0.14.0",
+    "@types/react": "~17.0.0",
+    "@types/react-dom": "~17.0.0",
     "@types/react-native": "~0.63.2",
-    "typescript": "~4.0.0"
+    "@types/react-native-loading-spinner-overlay": "^0.5.2",
+    "typescript": "~4.1.3"
   },
   "private": true
 }
