Make code cleaner and add debouncing

--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
     "react-native-safe-area-context": "3.2.0",
     "react-native-screens": "~3.2.0",
     "react-native-web": "~0.16.3",
-    "react-uid": "^2.3.1"
+    "react-uid": "^2.3.1",
+    "ts-debounce": "^3.0.0"
   },
   "devDependencies": {
     "@babel/core": "~7.14.3",
