--- a/tsconfig.json
+++ b/tsconfig.json
@@ -3,7 +3,10 @@
     "module": "esNext",
     "allowSyntheticDefaultImports": true,
     "jsx": "react-native",
-    "lib": ["dom", "esnext"],
+    "lib": [
+      "dom",
+      "esnext"
+    ],
     "moduleResolution": "node",
     "noEmit": true,
     "skipLibCheck": true,
