--- a/package.json
+++ b/package.json
@@ -9,11 +9,13 @@
   },
   "dependencies": {
     "axios": "^0.21.4",
+    "babel-preset-react-native": "^4.0.1",
     "expo": "~42.0.3",
     "expo-status-bar": "~1.0.4",
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "react-native": "https://github.com/expo/react-native/archive/sdk-40.0.1.tar.gz",
+    "react-native-dotenv": "^3.2.0",
     "react-native-gesture-handler": "~1.10.3",
     "react-native-loading-spinner-overlay": "^2.0.0",
     "react-native-reanimated": "~2.2.1",
