--- a/package.json
+++ b/package.json
@@ -8,31 +8,33 @@
     "eject": "expo eject"
   },
   "dependencies": {
-    "axios": "^0.21.4",
+    "axios": "^0.24.0",
+    "babel-plugin-inline-dotenv": "^1.6.0",
+    "babel-plugin-transform-inline-environment-variables": "^0.4.3",
     "babel-preset-react-native": "^4.0.1",
-    "expo": "~42.0.3",
-    "expo-status-bar": "~1.0.4",
+    "expo": "~43.0.3",
+    "expo-status-bar": "~1.1.0",
     "react": "17.0.2",
     "react-dom": "17.0.2",
-    "react-native": "https://github.com/expo/react-native/archive/sdk-40.0.1.tar.gz",
-    "react-native-dotenv": "^3.2.0",
+    "react-native": "https://github.com/expo/react-native/archive/sdk-43.0.0.tar.gz",
+    "react-native-dotenv": "^3.3.0",
     "react-native-gesture-handler": "~1.10.3",
     "react-native-loading-spinner-overlay": "^2.0.0",
-    "react-native-reanimated": "~2.2.1",
+    "react-native-reanimated": "~2.2.4",
     "react-native-safe-area-context": "3.3.2",
-    "react-native-screens": "~3.7.1",
-    "react-native-web": "~0.17.1",
+    "react-native-screens": "~3.9.0",
+    "react-native-web": "~0.17.5",
     "react-uid": "^2.3.1",
-    "ts-debounce": "^3.0.0"
+    "ts-debounce": "^4.0.0"
   },
   "devDependencies": {
-    "@babel/core": "~7.15.5",
+    "@babel/core": "~7.16.0",
     "@types/axios": "^0.14.0",
-    "@types/react": "~17.0.20",
-    "@types/react-dom": "~17.0.9",
-    "@types/react-native": "~0.65.0",
+    "@types/react": "~17.0.37",
+    "@types/react-dom": "~17.0.11",
+    "@types/react-native": "~0.66.6",
     "@types/react-native-loading-spinner-overlay": "^0.5.3",
-    "typescript": "~4.4.3"
+    "typescript": "~4.5.2"
   },
   "private": true
 }
