--- a/package.json
+++ b/package.json
@@ -1,4 +1,6 @@
 {
+  "name": "weather_app",
+  "version": "1.0.0",
   "main": "node_modules/expo/AppEntry.js",
   "scripts": {
     "start": "expo start",
@@ -12,29 +14,28 @@
     "babel-plugin-inline-dotenv": "^1.6.0",
     "babel-plugin-transform-inline-environment-variables": "^0.4.3",
     "babel-preset-react-native": "^4.0.1",
-    "expo": "~43.0.3",
-    "expo-status-bar": "~1.1.0",
+    "expo": "~44.0.0",
+    "expo-status-bar": "~1.2.0",
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "react-native": "https://github.com/expo/react-native/archive/sdk-43.0.0.tar.gz",
-    "react-native-dotenv": "^3.3.0",
-    "react-native-gesture-handler": "~1.10.3",
+    "react-native-dotenv": "^3.3.1",
+    "react-native-gesture-handler": "~2.1.0",
     "react-native-loading-spinner-overlay": "^2.0.0",
-    "react-native-reanimated": "~2.2.4",
+    "react-native-reanimated": "~2.3.1",
     "react-native-safe-area-context": "3.3.2",
-    "react-native-screens": "~3.9.0",
+    "react-native-screens": "~3.10.1",
     "react-native-web": "~0.17.5",
     "react-uid": "^2.3.1",
     "ts-debounce": "^4.0.0"
   },
   "devDependencies": {
-    "@babel/core": "~7.16.0",
+    "@babel/core": "~7.16.5",
     "@types/axios": "^0.14.0",
     "@types/react": "~17.0.37",
     "@types/react-dom": "~17.0.11",
-    "@types/react-native": "~0.66.6",
+    "@types/react-native": "~0.66.9",
     "@types/react-native-loading-spinner-overlay": "^0.5.3",
-    "typescript": "~4.5.2"
-  },
-  "private": true
+    "typescript": "~4.5.4"
+  }
 }
