--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "weather_app",
-  "version": "1.0.0",
+  "version": "1.0.1",
+  "license": "MIT",
   "main": "node_modules/expo/AppEntry.js",
   "scripts": {
     "start": "expo start",
@@ -10,32 +11,32 @@
     "eject": "expo eject"
   },
   "dependencies": {
-    "axios": "^0.24.0",
+    "axios": "^0.25.0",
     "babel-plugin-inline-dotenv": "^1.6.0",
     "babel-plugin-transform-inline-environment-variables": "^0.4.3",
     "babel-preset-react-native": "^4.0.1",
-    "expo": "~44.0.0",
+    "expo": "~44.0.5",
     "expo-status-bar": "~1.2.0",
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "react-native": "https://github.com/expo/react-native/archive/sdk-43.0.0.tar.gz",
     "react-native-dotenv": "^3.3.1",
-    "react-native-gesture-handler": "~2.1.0",
-    "react-native-loading-spinner-overlay": "^2.0.0",
+    "react-native-gesture-handler": "~2.2.0",
+    "react-native-loading-spinner-overlay": "^3.0.0",
     "react-native-reanimated": "~2.3.1",
     "react-native-safe-area-context": "3.3.2",
-    "react-native-screens": "~3.10.1",
+    "react-native-screens": "~3.10.2",
     "react-native-web": "~0.17.5",
     "react-uid": "^2.3.1",
     "ts-debounce": "^4.0.0"
   },
   "devDependencies": {
-    "@babel/core": "~7.16.5",
+    "@babel/core": "~7.16.12",
     "@types/axios": "^0.14.0",
-    "@types/react": "~17.0.37",
+    "@types/react": "~17.0.38",
     "@types/react-dom": "~17.0.11",
-    "@types/react-native": "~0.66.9",
+    "@types/react-native": "~0.66.15",
     "@types/react-native-loading-spinner-overlay": "^0.5.3",
-    "typescript": "~4.5.4"
+    "typescript": "~4.5.5"
   }
 }
