--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "@types/react-dom": "~17.0.14",
     "@types/react-native": "~0.67.3",
     "@types/react-native-loading-spinner-overlay": "^0.5.3",
+    "prettier": "^2.6.2",
     "typescript": "~4.6.2"
   }
 }
