--- a/package.json
+++ b/package.json
@@ -1,7 +1,8 @@
 {
   "name": "weather_app",
-  "version": "1.0.2",
+  "version": "1.0.3",
   "license": "MIT",
+  "private": true,
   "main": "node_modules/expo/AppEntry.js",
   "scripts": {
     "start": "expo start",
@@ -11,33 +12,52 @@
     "eject": "expo eject"
   },
   "dependencies": {
+    "@react-native-async-storage/async-storage": "^1.17.7",
+    "@react-navigation/bottom-tabs": "^6.3.2",
+    "@react-navigation/native": "^6.0.11",
     "axios": "^0.27.2",
     "babel-plugin-inline-dotenv": "^1.7.0",
     "babel-plugin-transform-inline-environment-variables": "^0.4.4",
+    "babel-preset-expo": "^9.1.0",
     "babel-preset-react-native": "^4.0.1",
-    "expo": "~45.0.5",
+    "expo": "^45.0.6",
+    "expo-location": "~14.2.2",
     "expo-status-bar": "~1.3.0",
-    "react": "18.1.0",
-    "react-dom": "18.1.0",
-    "react-native": "https://github.com/expo/react-native/archive/sdk-44.0.0.tar.gz",
+    "react": "17.0.2",
+    "react-dom": "17.0.2",
+    "react-native": "0.68.2",
     "react-native-dotenv": "^3.3.1",
-    "react-native-gesture-handler": "~2.4.2",
+    "react-native-gesture-handler": "~2.2.1",
     "react-native-loading-spinner-overlay": "^3.0.0",
     "react-native-reanimated": "~2.8.0",
-    "react-native-safe-area-context": "4.3.1",
-    "react-native-screens": "~3.13.1",
-    "react-native-web": "~0.17.7",
+    "react-native-safe-area-context": "4.2.4",
+    "react-native-screens": "~3.11.1",
+    "react-native-vector-icons": "^9.2.0",
+    "react-native-web": "0.17.7",
+    "react-redux": "^8.0.2",
     "react-uid": "^2.3.2",
+    "redux": "^4.2.0",
+    "redux-devtools-extension": "^2.13.9",
+    "redux-persist": "^6.0.0",
+    "redux-thunk": "^2.4.1",
     "ts-debounce": "^4.0.0"
   },
   "devDependencies": {
-    "@babel/core": "~7.18.2",
+    "@babel/core": "~7.18.6",
     "@types/axios": "^0.14.0",
-    "@types/react": "~18.0.12",
+    "@types/react": "~18.0.14",
     "@types/react-dom": "~18.0.5",
-    "@types/react-native": "~0.67.8",
+    "@types/react-native": "~0.69.1",
     "@types/react-native-loading-spinner-overlay": "^0.5.3",
-    "prettier": "^2.6.2",
-    "typescript": "~4.7.3"
+    "@types/react-native-vector-icons": "^6.4.11",
+    "@typescript-eslint/eslint-plugin": "^5.30.6",
+    "@typescript-eslint/parser": "^5.30.6",
+    "eslint": "^8.19.0",
+    "eslint-plugin-import": "^2.26.0",
+    "eslint-plugin-jsdoc": "^39.3.3",
+    "eslint-plugin-prefer-arrow": "^1.2.3",
+    "prettier": "^2.7.1",
+    "typescript": "~4.7.4"
   }
 }
+
