--- a/package.json
+++ b/package.json
@@ -56,8 +56,8 @@
     "eslint-plugin-import": "^2.26.0",
     "eslint-plugin-jsdoc": "^39.3.3",
     "eslint-plugin-prefer-arrow": "^1.2.3",
+    "husky": "^8.0.1",
     "prettier": "^2.7.1",
     "typescript": "~4.7.4"
   }
 }
-
