--- a/package.json
+++ b/package.json
@@ -12,17 +12,33 @@
     "eject": "expo eject"
   },
   "dependencies": {
+    "@babel/core": "~7.18.6",
+    "@manypkg/cli": "^0.19.1",
     "@react-native-async-storage/async-storage": "^1.17.7",
     "@react-navigation/bottom-tabs": "^6.3.2",
     "@react-navigation/native": "^6.0.11",
+    "@types/axios": "^0.14.0",
+    "@types/react": "~18.0.14",
+    "@types/react-dom": "~18.0.5",
+    "@types/react-native": "~0.69.1",
+    "@types/react-native-loading-spinner-overlay": "^0.5.3",
+    "@types/react-native-vector-icons": "^6.4.11",
+    "@typescript-eslint/eslint-plugin": "^5.30.6",
+    "@typescript-eslint/parser": "^5.30.6",
     "axios": "^0.27.2",
     "babel-plugin-inline-dotenv": "^1.7.0",
     "babel-plugin-transform-inline-environment-variables": "^0.4.4",
     "babel-preset-expo": "^9.1.0",
     "babel-preset-react-native": "^4.0.1",
+    "eslint": "^8.19.0",
+    "eslint-plugin-import": "^2.26.0",
+    "eslint-plugin-jsdoc": "^39.3.3",
+    "eslint-plugin-prefer-arrow": "^1.2.3",
     "expo": "^45.0.6",
     "expo-location": "~14.2.2",
     "expo-status-bar": "~1.3.0",
+    "husky": "^8.0.1",
+    "prettier": "^2.7.1",
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "react-native": "0.68.2",
@@ -40,24 +56,7 @@
     "redux-devtools-extension": "^2.13.9",
     "redux-persist": "^6.0.0",
     "redux-thunk": "^2.4.1",
-    "ts-debounce": "^4.0.0"
-  },
-  "devDependencies": {
-    "@babel/core": "~7.18.6",
-    "@types/axios": "^0.14.0",
-    "@types/react": "~18.0.14",
-    "@types/react-dom": "~18.0.5",
-    "@types/react-native": "~0.69.1",
-    "@types/react-native-loading-spinner-overlay": "^0.5.3",
-    "@types/react-native-vector-icons": "^6.4.11",
-    "@typescript-eslint/eslint-plugin": "^5.30.6",
-    "@typescript-eslint/parser": "^5.30.6",
-    "eslint": "^8.19.0",
-    "eslint-plugin-import": "^2.26.0",
-    "eslint-plugin-jsdoc": "^39.3.3",
-    "eslint-plugin-prefer-arrow": "^1.2.3",
-    "husky": "^8.0.1",
-    "prettier": "^2.7.1",
+    "ts-debounce": "^4.0.0",
     "typescript": "~4.7.4"
   }
 }
