--- a/package.json
+++ b/package.json
@@ -1,9 +1,10 @@
 {
   "name": "weather_app",
-  "version": "1.0.3",
+  "version": "1.0.4",
   "license": "MIT",
   "private": true,
   "main": "node_modules/expo/AppEntry.js",
+  "lastUgrade": "20220801",
   "scripts": {
     "start": "expo start",
     "android": "expo start --android",
@@ -12,44 +13,44 @@
     "eject": "expo eject"
   },
   "dependencies": {
-    "@babel/core": "~7.18.6",
+    "@babel/core": "~7.18.9",
     "@manypkg/cli": "^0.19.1",
     "@react-native-async-storage/async-storage": "^1.17.7",
     "@react-navigation/bottom-tabs": "^6.3.2",
     "@react-navigation/native": "^6.0.11",
     "@types/axios": "^0.14.0",
-    "@types/react": "~18.0.14",
-    "@types/react-dom": "~18.0.5",
-    "@types/react-native": "~0.69.1",
+    "@types/react": "~18.0.15",
+    "@types/react-dom": "~18.0.6",
+    "@types/react-native": "~0.69.4",
     "@types/react-native-loading-spinner-overlay": "^0.5.3",
     "@types/react-native-vector-icons": "^6.4.11",
-    "@typescript-eslint/eslint-plugin": "^5.30.6",
-    "@typescript-eslint/parser": "^5.30.6",
+    "@typescript-eslint/eslint-plugin": "^5.31.0",
+    "@typescript-eslint/parser": "^5.31.0",
     "axios": "^0.27.2",
     "babel-plugin-inline-dotenv": "^1.7.0",
     "babel-plugin-transform-inline-environment-variables": "^0.4.4",
     "babel-preset-expo": "^9.1.0",
     "babel-preset-react-native": "^4.0.1",
-    "eslint": "^8.19.0",
+    "eslint": "^8.21.0",
     "eslint-plugin-import": "^2.26.0",
-    "eslint-plugin-jsdoc": "^39.3.3",
+    "eslint-plugin-jsdoc": "^39.3.4",
     "eslint-plugin-prefer-arrow": "^1.2.3",
     "expo": "^45.0.6",
     "expo-location": "~14.2.2",
     "expo-status-bar": "~1.3.0",
     "husky": "^8.0.1",
     "prettier": "^2.7.1",
-    "react": "17.0.2",
-    "react-dom": "17.0.2",
-    "react-native": "0.68.2",
+    "react": "18.2.0",
+    "react-dom": "18.2.0",
+    "react-native": "0.69.3",
     "react-native-dotenv": "^3.3.1",
-    "react-native-gesture-handler": "~2.2.1",
-    "react-native-loading-spinner-overlay": "^3.0.0",
-    "react-native-reanimated": "~2.8.0",
-    "react-native-safe-area-context": "4.2.4",
-    "react-native-screens": "~3.11.1",
+    "react-native-gesture-handler": "~2.5.0",
+    "react-native-loading-spinner-overlay": "^3.0.1",
+    "react-native-reanimated": "~2.9.1",
+    "react-native-safe-area-context": "4.3.1",
+    "react-native-screens": "~3.15.0",
     "react-native-vector-icons": "^9.2.0",
-    "react-native-web": "0.17.7",
+    "react-native-web": "0.18.7",
     "react-redux": "^8.0.2",
     "react-uid": "^2.3.2",
     "redux": "^4.2.0",
