--- a/.gitignore
+++ b/.gitignore
@@ -241,6 +241,7 @@ dist
 .tern-port
 
 # Stores VSCode versions used for testing VSCode extensions
+.vscode/extensions.json
 .vscode-test
 
 ### ReactNative.Xcode Stack ###
