--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "weather_app",
-  "version": "1.0.4",
+  "version": "1.0.6",
   "license": "MIT",
   "private": true,
   "main": "node_modules/expo/AppEntry.js",
@@ -19,9 +19,9 @@
     "@react-navigation/bottom-tabs": "^6.3.2",
     "@react-navigation/native": "^6.0.11",
     "@types/axios": "^0.14.0",
-    "@types/react": "~18.0.15",
+    "@types/react": "~18.0.17",
     "@types/react-dom": "~18.0.6",
-    "@types/react-native": "~0.69.4",
+    "@types/react-native": "^0.69.5",
     "@types/react-native-loading-spinner-overlay": "^0.5.3",
     "@types/react-native-vector-icons": "^6.4.11",
     "@typescript-eslint/eslint-plugin": "^5.31.0",
@@ -40,17 +40,17 @@
     "expo-status-bar": "~1.3.0",
     "husky": "^8.0.1",
     "prettier": "^2.7.1",
-    "react": "18.2.0",
-    "react-dom": "18.2.0",
-    "react-native": "0.69.3",
+    "react": "17.0.2",
+    "react-dom": "17.0.2",
+    "react-native": "0.68.2",
     "react-native-dotenv": "^3.3.1",
-    "react-native-gesture-handler": "~2.5.0",
+    "react-native-gesture-handler": "~2.2.1",
     "react-native-loading-spinner-overlay": "^3.0.1",
-    "react-native-reanimated": "~2.9.1",
-    "react-native-safe-area-context": "4.3.1",
-    "react-native-screens": "~3.15.0",
+    "react-native-reanimated": "~2.8.0",
+    "react-native-safe-area-context": "4.2.4",
+    "react-native-screens": "~3.11.1",
     "react-native-vector-icons": "^9.2.0",
-    "react-native-web": "0.18.7",
+    "react-native-web": "0.17.7",
     "react-redux": "^8.0.2",
     "react-uid": "^2.3.2",
     "redux": "^4.2.0",
