--- a/tsconfig.json
+++ b/tsconfig.json
@@ -8,7 +8,10 @@
     "noEmit": true,
     "skipLibCheck": true,
     "resolveJsonModule": true,
-    "strict": true
+    "strict": true,
+    "paths": {
+      "@assets/*": ["assets/*"]
+    }
   },
   "extends": "expo/tsconfig.base"
 }
