--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "weather_app",
-  "version": "1.0.6",
+  "version": "1.0.7",
   "license": "MIT",
   "private": true,
   "main": "node_modules/expo/AppEntry.js",
@@ -9,7 +9,7 @@
     "type": "git",
     "url": "https://github.com/fadihanna123/WeatherApp"
   },
-  "lastUgrade": "20220801",
+  "lastUgrade": "20220905",
   "scripts": {
     "start": "expo start",
     "android": "expo start --android",
@@ -18,29 +18,29 @@
     "eject": "expo eject"
   },
   "dependencies": {
-    "@babel/core": "~7.18.9",
+    "@babel/core": "~7.18.13",
     "@manypkg/cli": "^0.19.1",
-    "@react-native-async-storage/async-storage": "^1.17.7",
-    "@react-navigation/bottom-tabs": "^6.3.2",
-    "@react-navigation/native": "^6.0.11",
+    "@react-native-async-storage/async-storage": "^1.17.10",
+    "@react-navigation/bottom-tabs": "^6.3.3",
+    "@react-navigation/native": "^6.0.12",
     "@types/axios": "^0.14.0",
-    "@types/react": "~18.0.17",
-    "@types/react-dom": "~18.0.6",
-    "@types/react-native": "^0.69.5",
+    "@types/react": "~17.0.21",
+    "@types/react-dom": "~17.0.11",
+    "@types/react-native": "~0.67.6",
     "@types/react-native-loading-spinner-overlay": "^0.5.3",
-    "@types/react-native-vector-icons": "^6.4.11",
-    "@typescript-eslint/eslint-plugin": "^5.31.0",
-    "@typescript-eslint/parser": "^5.31.0",
+    "@types/react-native-vector-icons": "^6.4.12",
+    "@typescript-eslint/eslint-plugin": "^5.36.2",
+    "@typescript-eslint/parser": "^5.36.2",
     "axios": "^0.27.2",
     "babel-plugin-inline-dotenv": "^1.7.0",
     "babel-plugin-transform-inline-environment-variables": "^0.4.4",
-    "babel-preset-expo": "^9.1.0",
+    "babel-preset-expo": "~9.1.0",
     "babel-preset-react-native": "^4.0.1",
-    "eslint": "^8.21.0",
+    "eslint": "^8.23.0",
     "eslint-plugin-import": "^2.26.0",
-    "eslint-plugin-jsdoc": "^39.3.4",
+    "eslint-plugin-jsdoc": "^39.3.6",
     "eslint-plugin-prefer-arrow": "^1.2.3",
-    "expo": "^45.0.6",
+    "expo": "^46.0.10",
     "expo-location": "~14.2.2",
     "expo-status-bar": "~1.3.0",
     "husky": "^8.0.1",
@@ -63,7 +63,7 @@
     "redux-persist": "^6.0.0",
     "redux-thunk": "^2.4.1",
     "ts-debounce": "^4.0.0",
-    "typescript": "~4.7.4"
+    "typescript": "~4.3.5"
   },
   "engines": {
     "node": ">=14.12.0",
