--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "expo": "~46.0.9",
     "expo-location": "~14.2.2",
     "expo-status-bar": "~1.3.0",
+    "expo-updates": "~0.13.4",
     "prettier": "^2.7.1",
     "react": "17.0.2",
     "react-dom": "17.0.2",
