--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "weather_app",
-  "version": "1.0.11",
+  "version": "1.0.12",
   "license": "MIT",
   "private": true,
   "main": "node_modules/expo/AppEntry.js",
@@ -23,6 +23,7 @@
     "@react-native-async-storage/async-storage": "^1.17.10",
     "@react-navigation/bottom-tabs": "^6.3.3",
     "@react-navigation/native": "^6.0.12",
+    "@reduxjs/toolkit": "^1.8.5",
     "@types/axios": "^0.14.0",
     "@types/react": "~17.0.21",
     "@types/react-dom": "~17.0.11",
@@ -47,18 +48,17 @@
     "prettier": "^2.7.1",
     "react": "17.0.2",
     "react-dom": "17.0.2",
-    "react-native": "0.68.3",
+    "react-native": "0.68.2",
     "react-native-dotenv": "^3.3.1",
-    "react-native-gesture-handler": "~2.6.2",
+    "react-native-gesture-handler": "~2.2.1",
     "react-native-loading-spinner-overlay": "^3.0.1",
-    "react-native-reanimated": "~2.10.0",
-    "react-native-safe-area-context": "4.3.4",
-    "react-native-screens": "~3.17.0",
+    "react-native-reanimated": "~2.8.0",
+    "react-native-safe-area-context": "4.2.4",
+    "react-native-screens": "~3.11.1",
     "react-native-web": "0.17.7",
     "react-redux": "^8.0.4",
     "react-uid": "^2.3.2",
     "redux": "^4.2.0",
-    "redux-devtools-extension": "^2.13.9",
     "redux-persist": "^6.0.0",
     "redux-thunk": "^2.4.1",
     "ts-debounce": "^4.0.0",
