Add lint option

--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "android": "expo start --android",
     "ios": "expo start --ios",
     "web": "expo start --web",
-    "eject": "expo eject"
+    "eject": "expo eject",
+    "lint": "eslint ."
   },
   "dependencies": {
     "@babel/core": "~7.20.12",
