--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "weather_app",
-  "version": "1.0.19",
+  "version": "1.0.20",
   "license": "MIT",
   "private": true,
   "main": "node_modules/expo/AppEntry.js",
@@ -9,7 +9,7 @@
     "type": "git",
     "url": "https://github.com/fadihanna123/WeatherApp"
   },
-  "lastUgrade": "20230203",
+  "lastUgrade": "20230302",
   "scripts": {
     "start": "expo start --tunnel",
     "android": "expo start --android",
@@ -19,47 +19,47 @@
     "lint": "eslint ."
   },
   "dependencies": {
-    "@babel/core": "~7.20.12",
+    "@babel/core": "^7.21.0",
     "@manypkg/cli": "^0.20.0",
-    "@react-native-async-storage/async-storage": "^1.17.11",
-    "@react-navigation/bottom-tabs": "^6.5.4",
-    "@react-navigation/native": "^6.1.3",
-    "@reduxjs/toolkit": "^1.9.2",
-    "@types/react": "~17.0.21",
-    "@types/react-dom": "~17.0.11",
-    "@types/react-native": "~0.67.6",
+    "@react-native-async-storage/async-storage": "1.17.11",
+    "@react-navigation/bottom-tabs": "^6.5.7",
+    "@react-navigation/native": "^6.1.6",
+    "@reduxjs/toolkit": "^1.9.3",
+    "@types/react": "~18.0.28",
+    "@types/react-dom": "~18.0.11",
+    "@types/react-native": "~0.71.3",
     "@types/react-native-loading-spinner-overlay": "^0.5.3",
     "@types/react-native-vector-icons": "^6.4.13",
-    "@typescript-eslint/eslint-plugin": "^5.50.0",
-    "@typescript-eslint/parser": "^5.50.0",
-    "axios": "^1.3.2",
+    "@typescript-eslint/eslint-plugin": "^5.54.0",
+    "@typescript-eslint/parser": "^5.54.0",
+    "axios": "^1.3.4",
     "babel-plugin-inline-dotenv": "^1.7.0",
-    "babel-preset-expo": "~9.1.0",
+    "babel-preset-expo": "^9.3.0",
     "babel-preset-react-native": "^4.0.1",
-    "eslint": "^8.33.0",
+    "eslint": "^8.35.0",
     "eslint-plugin-import": "^2.27.5",
-    "eslint-plugin-jsdoc": "^39.8.0",
+    "eslint-plugin-jsdoc": "^40.0.0",
     "eslint-plugin-prefer-arrow": "^1.2.3",
-    "expo": "~47.0.13",
-    "expo-location": "~14.2.2",
-    "expo-status-bar": "~1.3.0",
-    "expo-updates": "~0.13.4",
-    "prettier": "^2.8.3",
-    "react": "17.0.2",
-    "react-dom": "17.0.2",
-    "react-native": "0.68.2",
-    "react-native-dotenv": "^3.4.7",
-    "react-native-gesture-handler": "~2.2.1",
+    "expo": "^48.0.4",
+    "expo-location": "~15.1.1",
+    "expo-status-bar": "~1.4.4",
+    "expo-updates": "~0.16.3",
+    "prettier": "^2.8.4",
+    "react": "18.2.0",
+    "react-dom": "18.2.0",
+    "react-native": "0.71.3",
+    "react-native-dotenv": "^3.4.8",
+    "react-native-gesture-handler": "~2.9.0",
     "react-native-loading-spinner-overlay": "^3.0.1",
-    "react-native-reanimated": "~2.8.0",
-    "react-native-safe-area-context": "4.2.4",
-    "react-native-screens": "~3.11.1",
-    "react-native-web": "0.17.7",
+    "react-native-reanimated": "~2.14.4",
+    "react-native-safe-area-context": "4.5.0",
+    "react-native-screens": "~3.20.0",
+    "react-native-web": "~0.18.12",
     "react-redux": "^8.0.5",
     "react-uid": "^2.3.2",
     "redux": "^4.2.1",
     "ts-debounce": "^4.0.0",
-    "typescript": "~4.3.5"
+    "typescript": "^4.9.5"
   },
   "engines": {
     "node": ">=14.12.0",
