--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "weather_app",
-  "version": "1.0.21",
+  "version": "1.0.22",
   "license": "MIT",
   "private": true,
   "main": "node_modules/expo/AppEntry.js",
@@ -9,7 +9,7 @@
     "type": "git",
     "url": "https://github.com/fadihanna123/WeatherApp"
   },
-  "lastUgrade": "20230403",
+  "lastUgrade": "20230609",
   "scripts": {
     "start": "expo start --tunnel",
     "android": "expo start --android",
@@ -19,29 +19,29 @@
     "lint": "eslint ."
   },
   "dependencies": {
-    "@babel/core": "^7.21.8",
+    "@babel/core": "^7.22.5",
     "@manypkg/cli": "^0.20.0",
-    "@react-native-async-storage/async-storage": "1.18.1",
+    "@react-native-async-storage/async-storage": "1.17.11",
     "@react-navigation/bottom-tabs": "^6.5.7",
     "@react-navigation/native": "^6.1.6",
     "@reduxjs/toolkit": "^1.9.5",
-    "@types/eslint": "^8.40.0",
-    "@types/react": "18.2.8",
-    "@types/react-dom": "~18.2.4",
-    "@types/react-native": "~0.71.6",
+    "@types/eslint": "^8.40.1",
+    "@types/react": "~18.0.27",
+    "@types/react-dom": "~18.0.10",
+    "@types/react-native": "~0.72.2",
     "@types/react-native-loading-spinner-overlay": "^0.5.3",
     "@types/react-native-vector-icons": "^6.4.13",
-    "@typescript-eslint/eslint-plugin": "^5.59.5",
+    "@typescript-eslint/eslint-plugin": "^5.59.9",
     "@typescript-eslint/parser": "^5.59.9",
     "axios": "^1.4.0",
     "babel-plugin-inline-dotenv": "^1.7.0",
-    "babel-preset-expo": "^9.3.1",
+    "babel-preset-expo": "^9.3.2",
     "babel-preset-react-native": "^4.0.1",
     "eslint": "^8.42.0",
     "eslint-config-prettier": "^8.8.0",
     "eslint-config-universe": "^11.2.0",
     "eslint-plugin-import": "^2.27.5",
-    "eslint-plugin-jsdoc": "^46.2.5",
+    "eslint-plugin-jsdoc": "^46.2.6",
     "eslint-plugin-prefer-arrow": "^1.2.3",
     "eslint-plugin-prettier": "^4.2.1",
     "expo": "^48.0.19",
@@ -53,17 +53,17 @@
     "react-dom": "18.2.0",
     "react-native": "0.71.8",
     "react-native-dotenv": "^3.4.8",
-    "react-native-gesture-handler": "~2.10.2",
+    "react-native-gesture-handler": "~2.9.0",
     "react-native-loading-spinner-overlay": "^3.0.1",
-    "react-native-reanimated": "~3.0.2",
-    "react-native-safe-area-context": "4.5.3",
+    "react-native-reanimated": "~2.14.4",
+    "react-native-safe-area-context": "4.5.0",
     "react-native-screens": "~3.20.0",
-    "react-native-web": "~0.19.4",
-    "react-redux": "^8.0.5",
-    "react-uid": "^2.3.2",
+    "react-native-web": "~0.18.10",
+    "react-redux": "^8.0.7",
+    "react-uid": "^2.3.3",
     "redux": "^4.2.1",
     "ts-debounce": "^4.0.0",
-    "typescript": "^5.1.3"
+    "typescript": "^4.9.4"
   },
   "engines": {
     "node": ">=14.12.0",
