--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "weather_app",
-  "version": "1.0.22",
+  "version": "1.0.23",
   "license": "MIT",
   "private": true,
   "main": "node_modules/expo/AppEntry.js",
@@ -9,61 +9,62 @@
     "type": "git",
     "url": "https://github.com/fadihanna123/WeatherApp"
   },
-  "lastUgrade": "20230609",
+  "lastUgrade": "20230706",
   "scripts": {
     "start": "expo start --tunnel",
     "android": "expo start --android",
     "ios": "expo start --ios",
     "web": "expo start --web",
     "eject": "expo eject",
-    "lint": "eslint ."
+    "lint": "eslint .",
+    "format": "prettier . -w"
   },
   "dependencies": {
-    "@babel/core": "^7.22.5",
-    "@manypkg/cli": "^0.20.0",
+    "@babel/core": "^7.22.6",
+    "@manypkg/cli": "^0.21.0",
     "@react-native-async-storage/async-storage": "1.18.2",
     "@react-navigation/bottom-tabs": "^6.5.8",
-    "@react-navigation/native": "^6.1.6",
+    "@react-navigation/native": "^6.1.7",
     "@reduxjs/toolkit": "^1.9.5",
-    "@types/eslint": "^8.40.1",
-    "@types/react": "~18.2.14",
-    "@types/react-dom": "~18.2.5",
+    "@types/eslint": "^8.40.2",
+    "@types/react": "~18.0.27",
+    "@types/react-dom": "~18.0.10",
     "@types/react-native": "~0.72.2",
     "@types/react-native-loading-spinner-overlay": "^0.5.3",
     "@types/react-native-vector-icons": "^6.4.13",
-    "@typescript-eslint/eslint-plugin": "^5.60.1",
-    "@typescript-eslint/parser": "^5.59.9",
+    "@typescript-eslint/eslint-plugin": "^5.61.0",
+    "@typescript-eslint/parser": "^5.61.0",
     "axios": "^1.4.0",
     "babel-plugin-inline-dotenv": "^1.7.0",
-    "babel-preset-expo": "^9.3.2",
+    "babel-preset-expo": "^9.5.0",
     "babel-preset-react-native": "^4.0.1",
-    "eslint": "^8.42.0",
+    "eslint": "^8.44.0",
     "eslint-config-prettier": "^8.8.0",
-    "eslint-config-universe": "^11.2.0",
+    "eslint-config-universe": "^11.3.0",
     "eslint-plugin-import": "^2.27.5",
-    "eslint-plugin-jsdoc": "^46.2.6",
+    "eslint-plugin-jsdoc": "^46.4.3",
     "eslint-plugin-prefer-arrow": "^1.2.3",
     "eslint-plugin-prettier": "^4.2.1",
-    "expo": "^48.0.19",
-    "expo-location": "~15.1.1",
-    "expo-status-bar": "~1.4.4",
-    "expo-updates": "~0.16.4",
-    "prettier": "^2.8.8",
+    "expo": "^49.0.0",
+    "expo-location": "~16.0.0",
+    "expo-status-bar": "~1.6.0",
+    "expo-updates": "~0.18.8",
+    "prettier": "^3.0.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "react-native": "0.72.0",
-    "react-native-dotenv": "^3.4.8",
-    "react-native-gesture-handler": "~2.11.0",
+    "react-native": "0.72.1",
+    "react-native-dotenv": "^3.4.9",
+    "react-native-gesture-handler": "~2.12.0",
     "react-native-loading-spinner-overlay": "^3.0.1",
-    "react-native-reanimated": "~3.0.2",
-    "react-native-safe-area-context": "4.5.3",
-    "react-native-screens": "~3.21.1",
-    "react-native-web": "~0.19.5",
-    "react-redux": "^8.0.7",
+    "react-native-reanimated": "~3.3.0",
+    "react-native-safe-area-context": "4.6.3",
+    "react-native-screens": "~3.22.0",
+    "react-native-web": "~0.19.6",
+    "react-redux": "^8.1.1",
     "react-uid": "^2.3.3",
     "redux": "^4.2.1",
     "ts-debounce": "^4.0.0",
-    "typescript": "^5.1.3"
+    "typescript": "^5.1.6"
   },
   "engines": {
     "node": ">=14.12.0",
