--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -1,6 +1,24 @@
 {
   "version": "2.0.0",
   "tasks": [
-    { "label": "Install", "type": "npm", "script": "install", "auto": true }
+    {
+      "label": "Install dependencies",
+      "type": "shell",
+      "command": "yarn",
+      "runOptions": { "runOn": "folderOpen" },
+      "presentation": {
+        "reveal": "silent",
+        "close": true
+      }
+    },
+    {
+      "label": "Remove dependencies",
+      "type": "shell",
+      "command": "rm -rf node_modules .expo",
+      "presentation": {
+        "reveal": "silent",
+        "close": true
+      }
+    }
   ]
 }
