Upgrade packages, add ts-check and make api more clean and more typed

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -9,6 +9,7 @@
     "skipLibCheck": true,
     "resolveJsonModule": true,
     "strict": true,
+    "alwaysStrict": true,
     "paths": {
       "@assets/*": ["./assets/*"]
     }
