--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -4,7 +4,7 @@
     {
       "label": "Install dependencies",
       "type": "shell",
-      "command": "yarn",
+      "command": "yarn --emoji",
       "runOptions": { "runOn": "folderOpen" },
       "presentation": {
         "reveal": "silent",
