--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "weather_app",
-  "version": "1.0.23",
-  "license": "MIT",
+  "version": "1.0.24",
+  "license": "UNLICENSED",
   "private": true,
   "main": "node_modules/expo/AppEntry.js",
   "bugs": "https://github.com/fadihanna123/WeatherApp/issues",
@@ -9,9 +9,9 @@
     "type": "git",
     "url": "https://github.com/fadihanna123/WeatherApp"
   },
-  "lastUgrade": "20230706",
+  "lastUgrade": "20231015",
   "scripts": {
-    "start": "expo start --tunnel",
+    "dev": "expo start --tunnel",
     "android": "expo start --android",
     "ios": "expo start --ios",
     "web": "expo start --web",
@@ -20,54 +20,54 @@
     "format": "prettier . -w"
   },
   "dependencies": {
-    "@babel/core": "^7.23.0",
+    "@babel/core": "^7.23.2",
     "@manypkg/cli": "^0.21.0",
     "@react-native-async-storage/async-storage": "1.19.3",
-    "@react-navigation/bottom-tabs": "^6.5.8",
+    "@react-navigation/bottom-tabs": "^6.5.9",
     "@react-navigation/native": "^6.1.8",
-    "@reduxjs/toolkit": "^1.9.6",
-    "@types/eslint": "^8.44.2",
-    "@types/react": "~18.2.20",
-    "@types/react-dom": "~18.2.7",
+    "@reduxjs/toolkit": "^1.9.7",
+    "@types/eslint": "^8.44.4",
+    "@types/react": "18.2.28",
+    "@types/react-dom": "~18.2.13",
     "@types/react-native": "~0.72.3",
     "@types/react-native-loading-spinner-overlay": "^0.5.3",
-    "@types/react-native-vector-icons": "^6.4.13",
-    "@typescript-eslint/eslint-plugin": "^5.62.0",
-    "@typescript-eslint/parser": "^5.62.0",
+    "@types/react-native-vector-icons": "^6.4.15",
+    "@typescript-eslint/eslint-plugin": "^6.7.5",
+    "@typescript-eslint/parser": "^6.7.5",
     "axios": "^1.5.1",
     "babel-plugin-inline-dotenv": "^1.7.0",
-    "babel-preset-expo": "^9.5.0",
+    "babel-preset-expo": "^9.5.2",
     "babel-preset-react-native": "^4.0.1",
-    "eslint": "^8.49.0",
+    "eslint": "^8.51.0",
     "eslint-config-prettier": "^9.0.0",
     "eslint-config-universe": "^12.0.0",
     "eslint-plugin-import": "^2.28.1",
     "eslint-plugin-jsdoc": "^46.8.2",
     "eslint-plugin-prefer-arrow": "^1.2.3",
-    "eslint-plugin-prettier": "^5.0.0",
-    "expo": "^49.0.11",
+    "eslint-plugin-prettier": "^5.0.1",
+    "expo": "^49.0.13",
     "expo-location": "~16.3.0",
     "expo-status-bar": "~1.7.1",
-    "expo-updates": "~0.18.14",
+    "expo-updates": "~0.21.1",
     "prettier": "^3.0.3",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "react-native": "0.72.5",
+    "react-native": "0.72.6",
     "react-native-dotenv": "^3.4.9",
-    "react-native-gesture-handler": "~2.12.1",
+    "react-native-gesture-handler": "~2.13.2",
     "react-native-loading-spinner-overlay": "^3.0.1",
     "react-native-reanimated": "~3.5.4",
     "react-native-safe-area-context": "4.7.2",
     "react-native-screens": "~3.25.0",
     "react-native-web": "~0.19.9",
-    "react-redux": "^8.1.2",
+    "react-redux": "^8.1.3",
     "react-uid": "^2.3.3",
     "redux": "^4.2.1",
     "ts-debounce": "^4.0.0",
     "typescript": "^5.2.2"
   },
   "engines": {
-    "node": ">=14.12.0",
+    "node": ">=16.0.0",
     "npm": "Please use Yarn instead of NPM to install dependencies"
   },
   "resolutions": {
