--- a/tsconfig.json
+++ b/tsconfig.json
@@ -5,16 +5,38 @@
     "jsx": "react-native",
     "lib": ["dom", "esnext", "DOM.Iterable"],
     "moduleResolution": "node",
-    "noEmit": true,
     "skipLibCheck": true,
     "resolveJsonModule": true,
     "strict": true,
     "alwaysStrict": true,
+    "allowJs": true,
+    "allowUnreachableCode": false,
+    "allowUnusedLabels": false,
+    "checkJs": true,
+    "composite": true,
+    "declaration": true,
+    "declarationMap": true,
+    "moduleDetection": "force",
+    "noImplicitAny": true,
+    "noImplicitOverride": true,
+    "noImplicitThis": true,
+    "typeRoots": ["./node_modules/@types", "./src/types"],
+    "strictNullChecks": true,
+    "strictBindCallApply": true,
+    "strictFunctionTypes": true,
+    "strictPropertyInitialization": true,
+    "useUnknownInCatchVariables": false,
+    "rootDir": ".",
+    "noUnusedLocals": true,
+    "noPropertyAccessFromIndexSignature": true,
+    "noUncheckedIndexedAccess": true,
+    "removeComments": true,
+    "noUnusedParameters": true,
     "paths": {
       "@assets/*": ["./assets/*"]
     }
   },
-  "include": ["src/**/*", ".eslintrc.js", "App.tsx"],
+  "include": ["src/**/*", "App.tsx"],
   "exclude": ["node_modules"],
   "extends": "expo/tsconfig.base"
 }
