--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "eslint-plugin-prettier": "^5.0.1",
     "expo": "^49.0.13",
     "expo-location": "~16.1.0",
+    "expo-updates": "~0.18.18",
     "prettier": "^3.0.3",
     "react": "18.2.0",
     "react-native": "0.72.6",
