Add HTTP to test api

--- a/.gitignore
+++ b/.gitignore
@@ -2,6 +2,9 @@
 # Created by https://www.toptal.com/developers/gitignore/api/reactnative
 # Edit at https://www.toptal.com/developers/gitignore?templates=reactnative
 
+# API
+src/api.http
+
 ### ReactNative ###
 # React Native Stack Base
 
