Add HTTP to test api

--- a/.gitignore
+++ b/.gitignore
@@ -3,7 +3,7 @@
 # Edit at https://www.toptal.com/developers/gitignore?templates=reactnative
 
 # API
-src/api.http
+api.http
 
 ### ReactNative ###
 # React Native Stack Base
