--- a/package.json
+++ b/package.json
@@ -1,73 +1,72 @@
 {
   "name": "weather_app",
-  "version": "1.0.30",
+  "version": "1.0.31",
   "license": "MIT",
   "private": true,
+  "lastUgrade": "20250428",
   "main": "node_modules/expo/AppEntry.js",
   "bugs": "https://github.com/fadihanna123/WeatherApp/issues",
   "repository": {
     "type": "git",
     "url": "https://github.com/fadihanna123/WeatherApp"
   },
-  "lastUgrade": "20240913",
   "scripts": {
+    "setup": "yarn --emoji --silent --ignore-scripts",
     "dev": "expo start --tunnel",
     "android": "expo start --android",
     "ios": "expo start --ios",
     "web": "expo start --web",
     "eject": "expo eject",
-    "lint": "eslint .",
-    "format": "prettier . -w",
+    "lint": "eslint ./",
+    "format": "prettier ./ -w",
     "prepare": "husky",
-    "setup": "yarn --emoji --silent --ignore-scripts",
-    "clear": "rimraf node_modules dist"
+    "clear": "rimraf ./node_modules ./dist"
   },
   "dependencies": {
-    "@expo/ngrok": "^4.1.3",
-    "@react-navigation/bottom-tabs": "^7.2.0",
-    "@react-navigation/native": "^7.1.6",
-    "@reduxjs/toolkit": "^2.5.0",
-    "@types/eslint": "^9.6.1",
+    "@expo/metro-runtime": "~4.0.1",
+    "@expo/ngrok": "4.1.3",
+    "@react-navigation/bottom-tabs": "7.3.10",
+    "@react-navigation/native": "7.1.6",
+    "@reduxjs/toolkit": "2.7.0",
+    "@types/eslint": "9.6.1",
     "@types/react": "~18.3.12",
     "@types/react-native": "~0.73.0",
-    "@types/react-native-loading-spinner-overlay": "^0.5.6",
-    "@typescript-eslint/eslint-plugin": "^8.19.1",
-    "@typescript-eslint/parser": "8.29.1",
-    "axios": "1.7.9",
-    "eslint": "9.18.0",
-    "eslint-config-prettier": "^9.1.0",
-    "eslint-config-universe": "^14.0.0",
-    "eslint-plugin-import": "^2.31.0",
-    "eslint-plugin-prefer-arrow": "^1.2.3",
-    "eslint-plugin-prettier": "^5.2.1",
-    "expo": "~52.0.44",
-    "expo-location": "~18.0.5",
+    "@types/react-native-loading-spinner-overlay": "3.0.0",
+    "@typescript-eslint/eslint-plugin": "8.31.1",
+    "@typescript-eslint/parser": "8.31.1",
+    "axios": "1.9.0",
+    "eslint": "9.25.1",
+    "eslint-config-prettier": "10.1.2",
+    "eslint-config-universe": "14.0.0",
+    "eslint-plugin-import": "2.31.0",
+    "eslint-plugin-prefer-arrow": "1.2.3",
+    "eslint-plugin-prettier": "5.2.6",
+    "expo": "~52.0.46",
+    "expo-location": "~18.0.10",
     "expo-updates": "~0.27.4",
-    "prettier": "^3.4.2",
+    "prettier": "3.5.3",
     "react": "18.3.1",
-    "react-native": "0.76.6",
-    "react-native-loading-spinner-overlay": "^3.0.1",
+    "react-dom": "18.3.1",
+    "react-native": "0.76.9",
+    "react-native-loading-spinner-overlay": "3.0.1",
     "react-native-safe-area-context": "4.12.0",
     "react-native-web": "~0.19.13",
-    "react-redux": "^9.2.0",
-    "redux": "^5.0.1",
-    "ts-debounce": "^4.0.0",
-    "typescript": "~5.7.3"
+    "react-redux": "9.2.0",
+    "redux": "5.0.1",
+    "ts-debounce": "4.0.0",
+    "typescript": "~5.8.3"
   },
   "engines": {
     "node": ">=16.0.0 <=22.x.x",
     "npm": "Please use Yarn instead of NPM to install dependencies"
   },
-  "resolutions": {
-    "@types/react": "17.0.21"
-  },
   "devDependencies": {
-    "@eslint/compat": "^1.2.5",
-    "@eslint/eslintrc": "^3.2.0",
-    "@eslint/js": "^9.18.0",
-    "eslint-plugin-jsdoc": "^50.6.1",
-    "globals": "^15.14.0",
-    "husky": "^9.1.7",
-    "typescript-eslint": "8.19.1"
+    "@eslint/compat": "1.2.8",
+    "@eslint/eslintrc": "3.3.1",
+    "@eslint/js": "9.25.1",
+    "eslint-plugin-jsdoc": "50.6.11",
+    "globals": "16.0.0",
+    "husky": "9.1.7",
+    "typescript-eslint": "8.31.1"
   }
 }
