--- a/.vscode/extensions.json
+++ b/.vscode/extensions.json
@@ -1,8 +1,4 @@
 {
   // For more information, visit: https://go.microsoft.com/fwlink/?linkid=827846
-  "recommendations": [
-    "esbenp.prettier-vscode",
-    "editorconfig.editorconfig",
-    "dbaeumer.vscode-eslint"
-  ]
+  "recommendations": ["editorconfig.editorconfig"]
 }
