--- a/package.json
+++ b/package.json
@@ -1,9 +1,9 @@
 {
   "name": "weather_app",
-  "version": "1.0.31",
+  "version": "1.0.32",
   "license": "MIT",
   "private": true,
-  "lastUgrade": "20250428",
+  "lastUgrade": "20250903",
   "main": "node_modules/expo/AppEntry.js",
   "bugs": "https://github.com/fadihanna123/WeatherApp/issues",
   "repository": {
@@ -13,60 +13,40 @@
   "scripts": {
     "setup": "yarn --emoji --silent --ignore-scripts",
     "dev": "expo start --tunnel",
-    "android": "expo start --android",
-    "ios": "expo start --ios",
+    "android": "expo run:android",
+    "ios": "expo run:ios",
     "web": "expo start --web",
     "eject": "expo eject",
-    "lint": "eslint ./",
-    "format": "prettier ./ -w",
     "prepare": "husky",
     "clear": "rimraf ./node_modules ./dist"
   },
   "dependencies": {
     "@expo/metro-runtime": "~5.0.4",
     "@expo/ngrok": "4.1.3",
-    "@react-navigation/bottom-tabs": "7.3.10",
+    "@react-navigation/bottom-tabs": "7.4.7",
     "@react-navigation/native": "7.1.17",
-    "@reduxjs/toolkit": "2.8.2",
-    "@types/eslint": "9.6.1",
-    "@types/react": "~19.1.12",
-    "@types/react-native": "~0.73.0",
-    "@types/react-native-loading-spinner-overlay": "3.0.0",
-    "@typescript-eslint/eslint-plugin": "8.32.0",
-    "@typescript-eslint/parser": "8.31.1",
-    "axios": "1.9.0",
-    "eslint": "9.25.1",
-    "eslint-config-prettier": "10.1.8",
-    "eslint-config-universe": "15.0.3",
-    "eslint-plugin-import": "2.31.0",
-    "eslint-plugin-prefer-arrow": "1.2.3",
-    "eslint-plugin-prettier": "5.4.0",
-    "expo": "~52.0.46",
+    "@reduxjs/toolkit": "2.9.0",
+    "@types/react": "~19.0.10",
+    "axios": "1.11.0",
+    "expo": "~53.0.22",
     "expo-location": "~18.1.6",
     "expo-updates": "~0.28.17",
-    "prettier": "3.6.2",
-    "react": "19.1.1",
-    "react-dom": "19.1.0",
-    "react-native": "0.81.1",
-    "react-native-loading-spinner-overlay": "3.0.1",
+    "react": "19.0.0",
+    "react-dom": "19.0.0",
+    "react-native": "0.79.5",
     "react-native-safe-area-context": "5.4.0",
-    "react-native-web": "~0.21.1",
+    "react-native-screens": "~4.11.1",
+    "react-native-web": "^0.20.0",
     "react-redux": "9.2.0",
-    "redux": "5.0.1",
-    "ts-debounce": "4.0.0",
-    "typescript": "~5.8.3"
+    "redux": "5.0.1"
   },
   "engines": {
     "node": ">=16.0.0 <=22.x.x",
     "npm": "Please use Yarn instead of NPM to install dependencies"
   },
   "devDependencies": {
-    "@eslint/compat": "1.2.9",
-    "@eslint/eslintrc": "3.3.1",
-    "@eslint/js": "9.34.0",
-    "eslint-plugin-jsdoc": "54.1.1",
-    "globals": "16.0.0",
+    "globals": "16.3.0",
     "husky": "9.1.7",
-    "typescript-eslint": "8.41.0"
+    "typescript": "~5.8.3"
   }
 }
