--- a/package.json
+++ b/package.json
@@ -24,22 +24,19 @@
     "@expo/ngrok": "4.1.3",
     "@react-navigation/bottom-tabs": "7.8.4",
     "@react-navigation/native": "7.1.19",
-    "@reduxjs/toolkit": "2.9.2",
     "axios": "1.13.5",
-    "expo": "~54.0.21",
-    "expo-location": "~19.0.7",
-    "expo-updates": "~29.0.15",
+    "expo": "~54.0.33",
+    "expo-location": "~19.0.8",
+    "expo-updates": "~29.0.16",
     "react": "19.1.0",
     "react-dom": "19.1.0",
     "react-native": "0.81.5",
     "react-native-safe-area-context": "~5.6.2",
-    "react-native-screens": "~4.18.0",
-    "react-native-web": "^0.21.2",
-    "react-redux": "9.2.0",
-    "redux": "5.0.1"
+    "react-native-screens": "~4.16.0",
+    "react-native-web": "^0.21.2"
   },
   "engines": {
-    "node": ">=16.0.0 <=22.x.x",
+    "node": ">=16.0.0 <=24.x.x",
     "npm": "Please use Yarn instead of NPM to install dependencies"
   },
   "devDependencies": {
